# applied-fp-course

level01/: level01.cabal
level01/src/FirstApp/: Main.hs
level02/: level02.cabal
level02/src/FirstApp/: Main.hs  Types.hs
level03/: .dir-locals.el  TAGS  level03.cabal
level03/src/FirstApp/: Types.hs
level03/tests/: Test.hs
level04/: level04.cabal
level04/src/FirstApp/: Conf.hs  DB.hs  Main.hs  Types.hs
level04/src/FirstApp/DB/: Types.hs
level04/src/FirstApp/Types/: CommentText.hs  Error.hs  Topic.hs
level05/: .dir-locals.el  level05.cabal
level05/src/FirstApp/: AppM.hs  Conf.hs  Main.hs  Types.hs
level05/src/FirstApp/Conf/: File.hs
level05/src/FirstApp/DB/: Types.hs
level05/src/FirstApp/Types/: Error.hs  Topic.hs
level05/tests/: Test.hs
level06/: .dir-locals.el  level06.cabal  stack.yaml
level06/src/FirstApp/: AppM.hs  DB.hs  Main.hs  Types.hs
level06/src/FirstApp/Conf/: File.hs
level06/tests/: Test.hs
level07/: .dir-locals.el  level07.cabal
level07/src/FirstApp/: AppM.hs  Conf.hs  DB.hs  Main.hs  Types.hs
level07/src/FirstApp/Conf/: CommandLine.hs
level07/tests/: Test.hs
